@@ -1,3 +1,9 @@
+2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* tmda-rfilter (main): Support local mail delivery when the
+	ok,accept,deliver action contains an option specifying delivery
+	instructions.
+	
 2002-02-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* tmda-inject (inject_message): Send mail with Util.sendmail().
